fix: trucate text overflow

--- a/src/globals.css
+++ b/src/globals.css
@@ -55,8 +55,19 @@
   --radius: var(--border-radius-100);
   --radius-md: var(--border-radius-200);
 
+  --animate-marquee: marquee 1s linear infinite;
   --animate-accordion-down: accordion-down 300ms cubic-bezier(0.87, 0, 0.13, 1);
   --animate-accordion-up: accordion-up 300ms cubic-bezier(0.87, 0, 0.13, 1);
+
+  @keyframes marquee {
+    from {
+      transform: translate(0%);
+    }
+
+    to {
+      transform: translate(100%);
+    }
+  }
 
   @keyframes accordion-down {
     from {
@@ -77,4 +88,8 @@
       height: '0';
     }
   }
+}
+
+button {
+  text-align: unset;
 }
